handle case where no tag exists

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Get latest tag
         id: latest_tag
         run: |
-          latest_tag=$(git describe --abbrev=0 --tags)
+          latest_tag=$(git describe --abbrev=0 --tags || echo "v1.0.1")
           echo "::set-output name=tag::$latest_tag"
 
       - name: Increment tag version
