--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,11 @@ jobs:
           new_tag="v$new_version"
           echo "::set-output name=new_tag::$new_tag"
 
+      - name: Configure Git user
+        run: |
+          git config user.email ${{ github.actor }}@users.noreply.github.com
+          git config user.name ${{ github.actor }}
+
       - name: Create tag
         run: |
           git tag -a ${{ steps.increment_tag.outputs.new_tag }} -m "New tag created"
