--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Get latest tag
         id: latest_tag
         run: |
+          git fetch --tags --force --prune
           latest_tag=$(git describe --abbrev=0 --tags || echo "v1.0.1")
           echo "::set-output name=tag::$latest_tag"
 
