--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,7 @@ jobs:
         id: latest_tag
         run: |
           latest_tag=$(git describe --abbrev=0 --tags --match "v*.*.*" --always || echo "v1.0.1")
+          echo "Latest tag is $latest_tag"
           echo "::set-output name=tag::$latest_tag"
 
       - name: Increment tag version
@@ -29,6 +30,7 @@ jobs:
           version=$(echo $current_tag | sed -E 's/v([0-9]+.[0-9]+.[0-9]+)/\1/')
           new_version=$(echo $version | awk -F. -v OFS=. '{$NF++; print}')
           new_tag="v$new_version"
+          echo "New tag is $new_tag"
           echo "::set-output name=new_tag::$new_tag"
 
       - name: Configure Git user
