--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -37,6 +37,6 @@ jobs:
         with:
           go-version: 1.19
 
-      - name: Make package available
+      - name: List package
         run: |
           GOPROXY=proxy.golang.org go list -m github.com/nutreet/common@${{ needs.build.outputs.new_tag }} > /dev/null || echo "Could not find package"
