--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-FIREBASE_PROJECT_ID="FIREBASE_PROJECT_ID"
+FIREBASE_PROJECT_ID="FIREBASE__PROJECT__ID"
 TEST="test"
 FIREBASE_AUTH_EMULATOR_HOST="localhost:9099"
 FIREBASE_STORAGE_EMULATOR_HOST="localhost:9199"
