add grpc gateway

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ TEST="test"
 FIREBASE_AUTH_EMULATOR_HOST="localhost:9099"
 FIREBASE_STORAGE_EMULATOR_HOST="localhost:9199"
 FIRESTORE_EMULATOR_HOST="localhost:8080"
+
+USER_HTTP_PORT="8081"
+USER_GRPC_PORT="50051"
